--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,32 +11,14 @@
 Team 2
 <br>
 <br>
-<a href="./Code/Target/a-target/start.html">Targets A</a>
+<a href="./Code/targetStudy.html">SUMMATIVE STUDY LINK 1 (TARGETS)</a>
 <br>
-<a href="./Code/Target/b-target/start.html">Targets B</a>
-<br>
-<a href="./Code/Reading/a-reading/start.html">Reading A</a>
-<br>
-<a href="./Code/Reading/b-reading/start.html">Reading B</a>
-<br>
-<a href="./Code/testpage.html">Test page</a>
-<br>
-<a href="./Code/gr_example.html">GazeRecorder</a>
-<br>
-<a href="./Code/MagReading/A-Reading/magTest.html">Magnifier strength test</a>
-<br>
-<a href="./Code/heatmap.html">heatmap</a>
-<br>
-<a href="./Code/magnifiertest.html">GazeMag test</a>
-<br>
-<a href="./Code/finalStudy1.html">SUMMATIVE STUDY LINK 1 (TARGETS)</a>
-<br>
-<a href="./Code/finalStudy2.html">SUMMATIVE STUDY LINK 2 (READING)</a>
+<a href="./Code/readingStudy.html">SUMMATIVE STUDY LINK 2 (READING)</a>
 <br>
 <br>
 Rochester Institute of Technology
 <br>
-reu21t2@cs.rit.edu
+snkreu@cs.rit.edu
 </address>
 </body>
 </html>
