--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,8 @@ Team 2
 <br>
 <a href="./Code/readingStudy.html">SUMMATIVE STUDY LINK 2 (READING)</a>
 <br>
+<a href="./Homepage.html">Blurred homepage</a>
+<br>
 <a href="./Code/blurredTarget.html">BLURRED (TARGET)</a>
 <br>
 <a href="./Code/blurredReading.html">BLURRED (READING)</a>
